--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "description": "icon test repo",
   "keywords": [
-    "treasures of aztec pg",
-    "casinoonline"
+    "test",
+    "icon"
   ],
   "repository": "https://github.com/icondevteam/icon.git",
   "license": "MIT",
